2005-06-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ttftool/util.c (surely_lseek): use stdio FILE's for I/O 

	* ttftool/test.c: new file. If compiled with -DTEST_TTFTOOL,
	create a ttf2ps binary.

	* scm/ps-to-png.scm (make-ps-images): fix rename-page-1 functionality.

	* scm/backend-library.scm (postscript->png): set rename-page-1 to
	true.

2005-06-11  Graham Percival <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: add warning about
	the font warnings in dvips.

2005-06-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* THANKS: typo

	* mf/GNUmakefile ($(outdir)/$(redhat-package)): Fedora-4 url.

	* GNUmakefile.in: remove links for .map, .enc
	don't fail if out/ doesn't exist yet.

2005-06-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ttftool/util.c (surely_read): return nbytes

	* stepmake/bin/text2html.py (txt2html): add utf-8 marker. 

	* VERSION (PACKAGE_NAME): release 2.5.30

	* flower/string-convert.cc (precision_string): >? fix.

	* scm/ps-to-png.scm (make-ps-images): search-gs for multipage too.
	(make-ps-images): add verbose -q too.

	* lily/default-actions.cc (Module): new file. default
	{book,score}-print functions.

	* scm/ly-from-scheme.scm (ly:parse-string-result): use new setup:
	pass results via parseStringResult, lookup via ly:parser-lookup.  

	* lily/lily-parser.cc (Lily_parser): only clone lexer in
	constructors.
	(parse_file): encapsulate do_yyparse() in scm_set_current_module()
	(parse_string): idem.

	* ly/spanners-init.ly (assertBeamQuant): don't use #{ #} in init.

	* lily/main.cc (main_with_guile): copy be_verbose_global into
	ly_set_option()

2005-06-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/backend-library.scm (postscript->pdf):
	* scm/ps-to-png.scm (make-ps-images): Do not use gs -q switch in
	verbose mode.  Search for several names of gs executable.

2005-06-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ly-module.cc (ly_make_anonymous_module): call make-module